# cim-domain-policy

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPARISON_ANALYSIS.md  CONVERSION_ASSESSMENT.md  CONVERSION_COMPLETE.md  Cargo.toml  DOMAIN_DESIGN.md  PROGRESS_LOG.md  README.md  flake.nix
deployment/: LEAF_NODE_DEPLOYMENT.md
deployment/nix/: container.nix  darwin.nix  leaf.nix  lxc.nix
doc/: api.md  user-stories.md
examples/: access_control_policy.rs
src/: aggregate.rs  commands.rs  entities.rs  events.rs  lib.rs  value_objects.rs
src/adapters/: mod.rs  nats_event_publisher.rs
src/aggregate/: authentication.rs  mod.rs
src/commands/: authentication.rs  mod.rs
src/components/: approval.rs  authentication.rs  enforcement.rs  metadata.rs  mod.rs  policy.rs  rules.rs
src/events/: authentication.rs  enforcement.rs  mod.rs
src/handlers/: authentication.rs  command_handler.rs  event_handler.rs  mod.rs
src/infrastructure/: exemption_repository.rs  mod.rs  nats_integration.rs  policy_repository.rs  policy_set_repository.rs
src/ports/: event_publisher.rs  mod.rs
src/projections/: mod.rs
src/queries/: mod.rs
src/sagas/: approval_saga.rs  audit_saga.rs  enforcement_saga.rs  exemption_saga.rs  mod.rs
src/services/: conflict_resolver.rs  mod.rs  policy_evaluator.rs  template_engine.rs
src/systems/: approval.rs  approval_workflow.rs  authentication.rs  enforcement.rs  evaluation.rs  lifecycle.rs  mod.rs  policy_lifecycle.rs
src/value_objects/: authentication.rs  mod.rs  policy_types.rs
tests/: authentication_integration_test.rs  authorization_policies.rs  ecs_integration.rs  ecs_integration_tests.rs  integration_tests.rs  pki_policies.rs  policy_sagas.rs
