[package]
name = "cim-domain-policy"
version = "0.2.0"
edition = "2021"

[dependencies]
# Core dependencies
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"

# Domain dependencies
cim-domain = { path = "../cim-domain" }
cim-subject = { path = "../cim-subject" }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
