[package]
name = "cim-domain-policy"
version = "0.7.8"
edition = "2021"
authors = ["The Cowboy AI Team"]
description = "Policy domain for CIM - Rule definition, evaluation, and enforcement"
license = "MIT OR Apache-2.0"
repository = "https://github.com/thecowboyai/cim-domain-policy"
keywords = ["cim", "domain", "policy", "compliance", "rules"]
categories = ["domain-driven-design"]

[dependencies]
# Core CIM dependencies
cim-domain = { git = "https://github.com/TheCowboyAI/cim-domain.git", tag = "v0.7.8" }

# Core dependencies
uuid = { version = "1.11", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"

# Rule engine
pest = "2.7"
pest_derive = "2.7"

# Collections
indexmap = { version = "2.6", features = ["serde"] }

# Async runtime
tokio = { version = "1.42", features = ["sync"] }

# Logging
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["full", "test-util"] }
criterion = "0.5"
proptest = "1.5"